--- a/Pagedaccueil.html
+++ b/Pagedaccueil.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header class="hero">
-        <img src="https://images.unsplash.com/photo-1516426122078-c23e76319801?auto=format&fit=crop&w=1920&q=80" alt="Savane Hero">
+        <img src="Image/image1.png" alt="Éléphant Savane">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Au cœur de la vie sauvage</h1>
