--- a/PageContact.html
+++ b/PageContact.html
@@ -11,7 +11,7 @@
     <nav>
         <div class="logo">SAVANE PHOTOGRAPHIE</div>
         <ul>
-            <li><a href="Pagedaccueil.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="Expositiondumoment.html">Exposition du moment</a></li>
             <li><a href="Notrehistoire.html">Notre Histoire</a></li>
             <li><a href="PageContact.html">Contact</a></li>
