--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -12,7 +12,7 @@
     <nav>
         <div class="logo">SAVANE PHOTOGRAPHIE</div>
         <ul>
-            <li><a href="Pagedaccueil.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="Expositiondumoment.html" style="color: var(--box-gold);">Exposition du moment</a></li>
             <li><a href="Notrehistoire.html">Notre Histoire</a></li>
             <li><a href="PageContact.html">Contact</a></li>
