--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exposition | Savane Photographie</title>
-    <link rel="stylesheet" href="GLOBAL.css">
+    <link rel="stylesheet" href="GLOBAL.css">    
 </head>
 <body>
 
     <nav>
         <div class="logo">SAVANE PHOTOGRAPHIE</div>
         <ul>
-            <li><a href="Pagedaccueil.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="Expositiondumoment.html" style="color: var(--box-gold);">Exposition du moment</a></li>
             <li><a href="Notrehistoire.html">Notre Histoire</a></li>
         </ul>
     </nav>
 
     <header class="hero" style="height: 90vh;">
-        <img src="Image/image5.png" alt="Yeux Léopard">
+        <img src="Image/Image5.png" alt="Yeux Léopard">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Exposition du moment</h1>
@@ -35,12 +35,12 @@ Ne manquez pas cette immersion unique dans le monde des léopards !Venez admirer
     </section>
 
     <section class="gallery-grid">
-        <img src="Image/image6.png" alt="Léopard 1">
+        <img src="Image/Image6.png" alt="Léopard 1">
         <div style="background: #000; color: #fff; padding: 2rem; display: flex; align-items: center; justify-content: center; text-align: center;">
             <p>“L'élégance est la seule beauté qui ne se fane jamais.”</p>
         </div>
-        <img src="Image/image7.png" alt="Peau">
-        <img src="Image/image8.png" alt="Léopard 2">
+        <img src="Image/Image7.png" alt="Peau">
+        <img src="Image/Image8.png" alt="Léopard 2">
     </section>
 
     <footer>
