--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -14,6 +14,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="Expositiondumoment.html" style="color: var(--box-gold);">Exposition du moment</a></li>
             <li><a href="Notrehistoire.html">Notre Histoire</a></li>
+            <li><a href="PageContact.html">Contact</a></li>
         </ul>
     </nav>
 
