--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -47,7 +47,7 @@ Ne manquez pas cette immersion unique dans le monde des léopards !Venez admirer
     <footer>
         <p>Savane Photographie</p>
         <div class="separator"></div>
-        <a href="#" class="btn-gold">Réserver une visite</a>
+        <a href="PageContact.html" class="btn-gold">Réserver une visite</a>
     </footer>
 
 </body>
