--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header class="hero">
-        <img src="Image/image1.png" alt="Éléphant Savane">
+        <img src="Image/image1.jp2" alt="Éléphant Savane">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Au cœur de la vie sauvage</h1>
