Change image format from PNG to JP2
Signed-off-by: clementtlp <clementtlp@icloud.com>

--- a/PageContact.html
+++ b/PageContact.html
@@ -19,7 +19,7 @@
     </nav>
 
     <header class="hero" style="height: 90vh;">
-        <img src="Image/image11.png" alt="Contact Hero">
+        <img src="Image/image11.jp2" alt="Contact Hero">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Contactez-nous</h1>
