--- a/Notrehistoire.html
+++ b/Notrehistoire.html
@@ -20,7 +20,7 @@
     </nav>
 
     <header class="hero" style="height: 90vh;">
-        <img src="Image/image9.jp2" alt="Buffle Savane">
+        <img src="Image/image9.jpeg" alt="Buffle Savane">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Notre Histoire</h1>
@@ -34,7 +34,7 @@
 
     <section class="team-section" style="background-color: #fff;">
         <div class="block-img" style="height: 515px;">
-            <img src="Image/image10.jp2" alt="Photographe Animalier">
+            <img src="Image/image10.jpeg" alt="Photographe Animalier">
         </div>
         <div class="block-text">
             <h3>L'équipe</h3>
