--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -19,7 +19,7 @@
     </nav>
 
     <header class="hero" style="height: 90vh;">
-        <img src="Image/Image5.jp2" alt="Yeux Léopard">
+        <img src="Image/Image5.jpeg" alt="Yeux Léopard">
         <div class="overlay"></div>
         <div class="hero-content">
             <h1>Exposition du moment</h1>
@@ -36,12 +36,12 @@ Ne manquez pas cette immersion unique dans le monde des léopards !Venez admirer
     </section>
 
     <section class="gallery-grid">
-        <img src="Image/Image6.jp2" alt="Léopard 1">
+        <img src="Image/Image6.jpeg" alt="Léopard 1">
         <div style="background: #000; color: #fff; padding: 2rem; display: flex; align-items: center; justify-content: center; text-align: center;">
             <p>“L'élégance est la seule beauté qui ne se fane jamais.”</p>
         </div>
-        <img src="Image/Image7.jp2" alt="Peau">
-        <img src="Image/Image8.jp2" alt="Léopard 2">
+        <img src="Image/Image7.jpeg" alt="Peau">
+        <img src="Image/Image8.jpeg" alt="Léopard 2">
     </section>
 
     <footer>
