Change background color of gallery text container
Signed-off-by: clementtlp <clementtlp@icloud.com>

--- a/Expositiondumoment.html
+++ b/Expositiondumoment.html
@@ -37,7 +37,7 @@ Ne manquez pas cette immersion unique dans le monde des léopards !Venez admirer
 
     <section class="gallery-grid">
         <img src="Image/Image6.jpeg" alt="Léopard 1">
-        <div style="background: #000; color: #fff; padding: 2rem; display: flex; align-items: center; justify-content: center; text-align: center;">
+        <div style="background-color: #CABEA5; padding: 2rem; display: flex; align-items: center; justify-content: center; text-align: center;">
             <p>“L'élégance est la seule beauté qui ne se fane jamais.”</p>
         </div>
         <img src="Image/Image7.jpeg" alt="Peau">
